--- a/TOYOINK_dev/TOYOINK_dev.csproj
+++ b/TOYOINK_dev/TOYOINK_dev.csproj
@@ -12,6 +12,25 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>\\192.168.128.219\Conductor\Company\會計\系統開發相關程式\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Unc</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ProductName>系統開發相關程式</ProductName>
+    <PublisherName>TOYOINK MIS</PublisherName>
+    <ApplicationRevision>65</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,9 +51,70 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>AC3B5C7D25792ACF97494C5C80EAE8F0384B4423</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>TOYOINK_dev_1_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>MIS自開發.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
+      <HintPath>..\packages\Portable.BouncyCastle.1.8.6\lib\net40\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="ClosedXML, Version=0.94.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.94.2\lib\net46\ClosedXML.dll</HintPath>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.7.2.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.7.2\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
+    <Reference Include="ExcelNumberFormat, Version=1.0.3.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.0.3\lib\net20\ExcelNumberFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="FastMember, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FastMember.1.3.0\lib\net45\FastMember.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.1.2.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="NPOI, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OOXML, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.OOXML.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.OpenXml4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats, Version=2.5.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NPOI.2.5.1\lib\net45\NPOI.OpenXmlFormats.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.FileSystem.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.FileSystem.Primitives.4.0.1\lib\net46\System.IO.FileSystem.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IO.Packaging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Packaging.4.0.0\lib\net46\System.IO.Packaging.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,16 +124,114 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ACC\fm_Acc_5b.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ACC\fm_Acc_5b.Designer.cs">
+      <DependentUpon>fm_Acc_5b.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ACC\fm_Acc_F22_1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Acc_F22_1.designer.cs">
+      <DependentUpon>fm_Acc_F22_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ACC\fm_Acc_RelatedVOU.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Acc_RelatedVOU.designer.cs">
+      <DependentUpon>fm_Acc_RelatedVOU.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PC\fm_AUOCOPTC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PC\fm_AUOCOPTC.designer.cs">
+      <DependentUpon>fm_AUOCOPTC.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PC\fm_AUOPlannedOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PC\fm_AUOPlannedOrder.Designer.cs">
+      <DependentUpon>fm_AUOPlannedOrder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fm_login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fm_login.Designer.cs">
+      <DependentUpon>fm_login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fm_menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fm_menu.Designer.cs">
+      <DependentUpon>fm_menu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ACC\fm_Package5a8a.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Package5a8a.Designer.cs">
+      <DependentUpon>fm_Package5a8a.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ACC\fm_Package7b.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Package7b.Designer.cs">
+      <DependentUpon>fm_Package7b.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ACC\fm_Trademark.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Trademark.Designer.cs">
+      <DependentUpon>fm_Trademark.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyClass.cs" />
+    <Compile Include="ACC\fm_Premium.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ACC\fm_Premium.Designer.cs">
+      <DependentUpon>fm_Premium.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="月曆.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <EmbeddedResource Include="ACC\fm_Acc_5b.resx">
+      <DependentUpon>fm_Acc_5b.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Acc_F22_1.resx">
+      <DependentUpon>fm_Acc_F22_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Acc_RelatedVOU.resx">
+      <DependentUpon>fm_Acc_RelatedVOU.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PC\fm_AUOCOPTC.resx">
+      <DependentUpon>fm_AUOCOPTC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PC\fm_AUOPlannedOrder.resx">
+      <DependentUpon>fm_AUOPlannedOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fm_login.resx">
+      <DependentUpon>fm_login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fm_menu.resx">
+      <DependentUpon>fm_menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Package5a8a.resx">
+      <DependentUpon>fm_Package5a8a.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Package7b.resx">
+      <DependentUpon>fm_Package7b.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Premium.resx">
+      <DependentUpon>fm_Premium.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ACC\fm_Trademark.resx">
+      <DependentUpon>fm_Trademark.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +241,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="月曆.resx" />
+    <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -72,9 +253,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TOYOINK_dev_1_TemporaryKey.pfx" />
+    <None Include="TOYOINK_dev_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 與 x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MIS自開發.ico" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
