--- a/TOYOINK_dev/TOYOINK_dev.csproj
+++ b/TOYOINK_dev/TOYOINK_dev.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>系統開發相關程式</ProductName>
     <PublisherName>TOYOINK MIS</PublisherName>
-    <ApplicationRevision>85</ApplicationRevision>
+    <ApplicationRevision>86</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -64,10 +64,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>659E9526C0DC4F302F1DD4B4DF5A530932E0115D</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>66A7050788444B5DC7EE69C661653C928199F797</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>TOYOINK_dev_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>TOYOINK_dev_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>MIS自開發.ico</ApplicationIcon>
@@ -262,6 +262,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TOYOINK_dev_1_TemporaryKey.pfx" />
     <None Include="TOYOINK_dev_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
