--- a/TOYOINK_dev/packages.config
+++ b/TOYOINK_dev/packages.config
@@ -1,12 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.94.2" targetFramework="net461" />
-  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
-  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
-  <package id="FastMember" version="1.3.0" targetFramework="net461" />
-  <package id="NPOI" version="2.5.1" targetFramework="net461" />
-  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net461" />
-  <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
-  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
+  <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
+  <package id="ClosedXML" version="0.102.2" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
+  <package id="Enums.NET" version="5.0.0" targetFramework="net48" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="ExtendedNumerics.BigDecimal" version="2025.1001.2.129" targetFramework="net48" />
+  <package id="FastMember" version="1.5.0" targetFramework="net48" />
+  <package id="Irony" version="1.5.1" targetFramework="net48" />
+  <package id="Irony.NetCore" version="1.1.11" targetFramework="net48" />
+  <package id="MathNet.Numerics.Signed" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net48" />
+  <package id="NPOI" version="2.7.0" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.1" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="3.1.4" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="8.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="XLParser" version="1.7.2" targetFramework="net48" />
 </packages>
