--- a/TOYOINK_dev/App.config
+++ b/TOYOINK_dev/App.config
@@ -53,6 +53,10 @@
         <assemblyIdentity name="System.IO.Packaging" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.20.0.0" newVersion="2.20.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
